# RAG-Agent

./: .gitignore  guia-claude-code-agente-rag.md  ruta.md
utb-rag-agent/: .env.example  .gitignore  pyproject.toml  requirements.txt
utb-rag-agent/app/: config.py  main.py  schemas.py
utb-rag-agent/app/channels/: email.py  whatsapp.py
utb-rag-agent/app/db/: database.py
utb-rag-agent/app/rag/: agent.py  embeddings.py  ingest.py  llm.py  memory.py  metrics.py  reranker.py  retriever.py  tasks.py
utb-rag-agent/app/routers/: docs.py  metrics.py  sessions.py
utb-rag-agent/data/: metrics.jsonl
utb-rag-agent/scripts/: ingest.py
