[project]
name = "utb-rag-agent"
version = "0.1.0"
description = "Agente RAG de atención de primer nivel — UTB Omnichannel"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "chromadb>=0.5.0",
    "google-genai>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.7.0",
    "python-multipart>=0.0.32",
    "pymupdf>=1.27.2.3",
    "aiosqlite>=0.22.1",
    "sentence-transformers>=5.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
